# monty-compat

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/monty_compat/: __init__.py  cache.py  capabilities.py
tests/: test_monty_compat.py
