[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monty-compat"
version = "0.4.0"
description = "AST-based Python compatibility checker for the Monty interpreter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mert", email = "contact@tomris.dev"},
]
keywords = ["monty", "pydantic-monty", "sandbox", "compatibility", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No runtime dependencies — stdlib only (ast, re, zipfile, urllib, json, pathlib)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pydantic-monty",
]

[project.urls]
Homepage = "https://github.com/fswair/monty-compat"
Repository = "https://github.com/fswair/monty-compat"

[tool.hatch.build.targets.wheel]
packages = ["src/monty_compat"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
